# bot_tools

./: .dockerignore  .env.dev  .env.prod  .gitignore  README.md  bir.sql  pyproject.toml
.github/workflows/: docker-image.yml
data/: db.sqlite3
src/plugins/group_title/: __init__.py  models.py  models_method.py  str_type.py  test.py
