[project]
name = "bot_tools"
version = "0.1.0"
description = "bot_tools"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2>=2.4.2",
    "nonebot-adapter-onebot>=2.4.6",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
plugins = []
Adapter = [
    "nonebot.adapters.onebot",
]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
